added poorly done cart-page

--- a/html/cart.html
+++ b/html/cart.html
@@ -42,18 +42,73 @@
                 <li><a href="#" area-label="Visit partners page">Partnership</a></li>
             </ul>
         </nav>
-    </div>
-    <div id="cart-main" role="main">
+        <div class="thank-you">Thank you for purchasing in our shop!</div>
+        <div id="cart-main" role="main">
+            <section class="cart-list">
+                <table>
+                    <thead>
+                        <th>Product</th>
+                        <th>Price</th>
+                        <th>Amount</th>
+                        <th>Total Price</th>
+                    </thead>
+                    <tr>
+                        <td>
+                            <div class="coffee-card  in-cart">
+                                <div class="coffee-card__header">
+                                    Bourbon
+                                </div>
+                                <div class="coffee-card__content">
+                                    <img src="../images/coffeeProducts/bourbonBeans.png"
+                                        alt="Bourbon Coffee Beans Picture">
+                                </div>
+                            </div>
+                        </td>
+                        <td>10$</td>
+                        <td>1</td>
+                        <td>10$</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="coffee-card in-cart">
+                                <div class="coffee-card__header">
+                                    Geisha
+                                </div>
+                                <div class="coffee-card__content">
+                                    <img src="../images/coffeeProducts/geishaBeans.png"
+                                        alt="Geisha Coffee Beans Picture">
+                                </div>
+                            </div>
+                        </td>
+                        <td>5$</td>
+                        <td>2</td>
+                        <td>10$</td>
+                    </tr>
+                </table>
+            </section>
+            <aside class="purchase">
+                <div class="purchase__header">
+                    <h2>Your orders</h2>
+                </div>
+                <div class="purchase__content">
+                    <div>Total Order Price</div>
+                    <div>20$</div>
+                </div>
+                <button class="purchase__btn btn">Checkout</button>
+            </aside>
 
+        </div>
+        <footer>
+            <h2 class="footer__header">Stay In Touch With Us</h2>
+            <section class="footer__contacts">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-instagram"></i>
+            </section>
+        </footer>
     </div>
-    <footer>
-        <h2 class="footer__header">Stay In Touch With Us</h2>
-        <section class="footer__contacts">
-            <i class="fab fa-facebook"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-instagram"></i>
-        </section>
-    </footer>
+
+
 </body>
 
 </html>
