--- a/html/login.html
+++ b/html/login.html
@@ -36,7 +36,7 @@
         </header>
         <nav>
             <ul>
-                <li><a href="../html/index.html" area-label="Visit home page">Home</a></li>
+                <li><a href="../index.html" area-label="Visit home page">Home</a></li>
                 <li><a href="#" area-label="Visit about page">About</a></li>
                 <li><a href="#" area-label="Visit specials page">Specials</a></li>
                 <li><a href="#" area-label="Visit partners page">Partnership</a></li>
