--- a/index.html
+++ b/index.html
@@ -10,84 +10,93 @@
   </head>
   <body>
     <nav>
-        <div class="logo">Scents</div>
+      <div class="logo">Scents</div>
       <ul class="menu">
-        <li><a href="http://">Home</a></li>
-        <li><a href="http://">About Us</a></li>
-        <li><a href="http://">Products</a></li>
+        <li><a href="http://127.0.0.1:5500/">Home</a></li>
+        <li><a href="http://127.0.0.1:5500/#banner-section">About Us</a></li>
+        <li><a href="/store/productdetails.html">Products</a></li>
       </ul>
 
       <svg class="cart__icon" viewBox="0 0 24 24">
-        <path fill="currentColor" d="M17,18C15.89,18 15,18.89 15,20A2,2 0 0,0 17,22A2,2 0 0,0 19,20C19,18.89 18.1,18 17,18M1,2V4H3L6.6,11.59L5.24,14.04C5.09,14.32 5,14.65 5,15A2,2 0 0,0 7,17H19V15H7.42A0.25,0.25 0 0,1 7.17,14.75C7.17,14.7 7.18,14.66 7.2,14.63L8.1,13H15.55C16.3,13 16.96,12.58 17.3,11.97L20.88,5.5C20.95,5.34 21,5.17 21,5A1,1 0 0,0 20,4H5.21L4.27,2M7,18C5.89,18 5,18.89 5,20A2,2 0 0,0 7,22A2,2 0 0,0 9,20C9,18.89 8.1,18 7,18Z" />
-    </svg>
+        <path
+          fill="currentColor"
+          d="M17,18C15.89,18 15,18.89 15,20A2,2 0 0,0 17,22A2,2 0 0,0 19,20C19,18.89 18.1,18 17,18M1,2V4H3L6.6,11.59L5.24,14.04C5.09,14.32 5,14.65 5,15A2,2 0 0,0 7,17H19V15H7.42A0.25,0.25 0 0,1 7.17,14.75C7.17,14.7 7.18,14.66 7.2,14.63L8.1,13H15.55C16.3,13 16.96,12.58 17.3,11.97L20.88,5.5C20.95,5.34 21,5.17 21,5A1,1 0 0,0 20,4H5.21L4.27,2M7,18C5.89,18 5,18.89 5,20A2,2 0 0,0 7,22A2,2 0 0,0 9,20C9,18.89 8.1,18 7,18Z"
+        />
+      </svg>
 
-      <button class="btn">Login/Register</button>
+      <button class="btn"> <a href="/store/LoginRegister.html"> Login/Register</a></button>
     </nav>
 
-    <header id="banner">
+    <header id="banner-section">
       <div class="banner">
-        <h1 class="banner__title"> Elevate Your Senses with Exquisite Fragrances</h1>
-        <p class="banner__description">Discover the world of luxury fragrances and indulge in our carefully curated selection of scents. From classic favorites to the latest trends, our fragrances will transport you to a world of elegance and sophistication. Experience the ultimate in fragrance luxury with us</p>
+        <h1 class="banner__title">
+          Elevate Your Senses with Exquisite Fragrances
+        </h1>
+        <p class="banner__description">
+          Discover the world of luxury fragrances and indulge in our carefully
+          curated selection of scents. From classic favorites to the latest
+          trends, our fragrances will transport you to a world of elegance and
+          sophistication. Experience the ultimate in fragrance luxury with us
+        </p>
         <button class="btn banner--btn">Check our Latest Products</button>
       </div>
     </header>
 
-   <section id="product-section">
-    <div class="product-grid">
-      <article class="product">
-        <img src="/assets/product1.png" alt="Product 1">
-        <h3>Product 1</h3>
-        <div class="price">$19.99</div>
-        <button>Add to Cart</button>
-      </article>
-      <article class="product">
-        <img src="/assets/product2.png" alt="Product 2">
-        <h3>Product 2</h3>
-        <div class="price">$19.99</div>
-        <button>Add to Cart</button>
-      </article>
-      <article class="product">
-        <img src="/assets/product3.png" alt="Product 3">
-        <h3>Product 3</h3>
-        <div class="price">$19.99</div>
-        <button>Add to Cart</button>
-      </article>
-      <article class="product">
-        <img src="/assets/product4.png" alt="Product 4">
-        <h3>Product 4</h3>
-        <div class="price">$19.99</div>
-        <button>Add to Cart</button>
-      </article>
-      <article class="product">
-        <img src="/assets/product5.png" alt="Product 5">
-        <h3>Product 5</h3>
-        <div class="price">$19.99</div>
-        <button>Add to Cart</button>
-      </article>
-      <article class="product">
-        <img src="/assets/product6.png" alt="Product 6">
-        <h3>Product 6</h3>
-        <div class="price">$19.99</div>
-        <button>Add to Cart</button>
-      </article>
-    </div>
-   </section>
-  
-   <footer>
-    <div class="container">
-      <div class="footer-left">
-        <p>Copyright © 2022 Scents</p>
+    <section id="product-section">
+      <div class="product-grid">
+        <article class="product">
+          <img src="/assets/product1.png" alt="Product 1" />
+          <h3>Product 1</h3>
+          <div class="price">$19.99</div>
+          <button>Add to Cart</button>
+        </article>
+        <article class="product">
+          <img src="/assets/product2.png" alt="Product 2" />
+          <h3>Product 2</h3>
+          <div class="price">$19.99</div>
+          <button>Add to Cart</button>
+        </article>
+        <article class="product">
+          <img src="/assets/product3.png" alt="Product 3" />
+          <h3>Product 3</h3>
+          <div class="price">$19.99</div>
+          <button>Add to Cart</button>
+        </article>
+        <article class="product">
+          <img src="/assets/product4.png" alt="Product 4" />
+          <h3>Product 4</h3>
+          <div class="price">$19.99</div>
+          <button>Add to Cart</button>
+        </article>
+        <article class="product">
+          <img src="/assets/product5.png" alt="Product 5" />
+          <h3>Product 5</h3>
+          <div class="price">$19.99</div>
+          <button>Add to Cart</button>
+        </article>
+        <article class="product">
+          <img src="/assets/product6.png" alt="Product 6" />
+          <h3>Product 6</h3>
+          <div class="price">$19.99</div>
+          <button>Add to Cart</button>
+        </article>
       </div>
-      <div class="footer-right">
-        <div class="footer__menu">
-          <a href="#">About</a>
-          <a href="#">Contact</a>
-          <a href="#">Privacy Policy</a>
-          <a href="#">Terms of Use</a>
-        </nav>
+    </section>
+
+    <footer>
+      <div class="container">
+        <div class="footer-left">
+          <p>Copyright © 2022 Scents</p>
+        </div>
+        <div class="footer-right">
+          <div class="footer__menu">
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms of Use</a>
+          </div>
+        </div>
       </div>
-    </div>
-  </footer>
-  
+    </footer>
   </body>
 </html>
