100% Accessibility on Index, shop, login

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="search-container">
             <form class="search-container__form">
               <input type="text" placeholder="Search.." name="search" class="search__field">
-              <button type="submit" class="btn search__btn" name="Search"><i class="fa fa-search"></i></button>
+              <button type="submit" class="btn search__btn" name="Search" aria-label="Search field button"><i class="fa fa-search"></i></button>
             </form>
         </div>
         <div class="navbar__menu-container">
@@ -28,7 +28,7 @@
                <a href="/src/shop.html">Shop</a></li>
                 <a href="src/about.html">About</a>
                 <a href="/src/login.html">Login</a>
-                <a href="src/cart.html" name="Cart"><span class="cart__menu"><i class="fa fa-cart-plus"></i></span></a>
+                <a href="src/cart.html" name="Cart" aria-label="Cart"><span class="cart__menu"><i class="fa fa-cart-plus"></i></span></a>
             </div>
             <div>    
                 <input class="menu-btn" type="checkbox" id="menu-btn" />
