--- a/src/about.html
+++ b/src/about.html
@@ -20,7 +20,7 @@
         <div class="search-container">
             <form class="search-container__form">
               <input type="text" placeholder="Search.." name="search" class="search__field">
-              <button type="submit" class="btn search__btn"><i class="fa fa-search"></i></button>
+              <button type="submit" class="btn search__btn" aria-label="Search field button"><i class="fa fa-search"></i></button>
             </form>
         </div>
         <div class="navbar__menu-container">
