--- a/src/cart.html
+++ b/src/cart.html
@@ -20,7 +20,7 @@
         <div class="search-container">
             <form class="search-container__form">
               <input type="text" placeholder="Search.." name="search" class="search__field">
-              <button type="submit" class="btn search__btn"><i class="fa fa-search"></i></button>
+              <button type="submit" class="btn search__btn" aria-label="Search field button"><i class="fa fa-search"></i></button>
             </form>
         </div>
         <div class="navbar__menu-container">
@@ -28,7 +28,7 @@
                <a href="/src/shop.html">Shop</a></li>
                 <a href="/src/about.html">About</a>
                 <a href="/src/login.html">Login</a>
-                <a href="#"><span class="cart__menu"><i class="fa fa-cart-plus"></i></span></a>
+                <a href="#" aria-label="Cart" name="Cart link"><span class="cart__menu"><span class="cart__menu"><i class="fa fa-cart-plus"></i></span></a>
             </div>
             <div>    
                 <input class="menu-btn" type="checkbox" id="menu-btn" />
@@ -43,20 +43,20 @@
         </h1>
         <div class="cart-items">
             <div class="cart-item"><img src="/src/images/suit1.jpg.jpg" alt="A suit" class="cart-item__img">Modern CSS, 300 grams     
-                <input id="number" type="number" value="1" class="item__amount"/>
+                <input id="Amount-item123 " type="number" value="1" class="item__amount" aria-label="Amount"/>
                 <span class="total-item__price">990</span>$
             </div>
             <div class="cart-item"><img src="/src/images/suit1.jpg.jpg" alt="A suit" class="cart-item__img">Modern CSS, 300 grams     
-                <input id="number" type="number" value="1" class="item__amount"/>
+                <input id="Amount-item456" type="number" value="1" class="item__amount" aria-label="Amount"/>
                 <span class="total-item__price">990</span>$
             </div>
             <div class="cart-item"><img src="/src/images/suit1.jpg.jpg" alt="A suit" class="cart-item__img">Modern CSS, 300 grams     
-                <input id="number" type="number" value="1" class="item__amount"/>
+                <input id="Amount-item789" type="number" value="1" class="item__amount" aria-label="Amount"/>
                 <span class="total-item__price">990</span>$
             </div>
             <div class="total-price__container">
                 Total: <span class="total-price">2970</span>$ <br>
-                <button type="submit" class="btn buy__btn"><a href="/src/payment.html"> Buy now </a></button>
+                <button type="submit" class="btn buy__btn" aria-label="Go to payment"><a href="/src/payment.html"> Buy now </a></button>
             </div>
 
         </div>
