--- a/index.html
+++ b/index.html
@@ -13,15 +13,21 @@
       <div class="logo">Scents</div>
       <ul class="menu">
         <li><a href="http://127.0.0.1:5500/">Home</a></li>
-        <li><a href="http://127.0.0.1:5500/#banner-section">About Us</a></li>
+        <li><a href="/index.html/#banner-section">About Us</a></li>
         <li><a href="/store/productdetails.html">Products</a></li>
+        <svg class="cart__icon" viewBox="0 0 24 24">
+          <path
+            fill="currentColor"
+            d="M12,13A5,5 0 0,1 7,8H9A3,3 0 0,0 12,11A3,3 0 0,0 15,8H17A5,5 0 0,1 12,13M12,3A3,3 0 0,1 15,6H9A3,3 0 0,1 12,3M19,6H17A5,5 0 0,0 12,1A5,5 0 0,0 7,6H5C3.89,6 3,6.89 3,8V20A2,2 0 0,0 5,22H19A2,2 0 0,0 21,20V8C21,6.89 20.1,6 19,6Z"
+          />
+        </svg>
       </ul>
 
-      <svg class="cart__icon" viewBox="0 0 24 24">
-        <path fill="currentColor" d="M12,13A5,5 0 0,1 7,8H9A3,3 0 0,0 12,11A3,3 0 0,0 15,8H17A5,5 0 0,1 12,13M12,3A3,3 0 0,1 15,6H9A3,3 0 0,1 12,3M19,6H17A5,5 0 0,0 12,1A5,5 0 0,0 7,6H5C3.89,6 3,6.89 3,8V20A2,2 0 0,0 5,22H19A2,2 0 0,0 21,20V8C21,6.89 20.1,6 19,6Z" />
-    </svg>
+     
 
-      <button class="btn"> <a href="/store/LoginRegister.html"> Login/Register</a></button>
+      <button class="btn">
+        <a href="/store/LoginRegister.html"> Login/Register</a>
+      </button>
     </nav>
 
     <header id="banner-section">
@@ -42,40 +48,52 @@
     <section id="product-section">
       <div class="product-grid">
         <article class="product">
-          <img src="/assets/product1.png" alt="Product 1" />
-          <h3>Product 1</h3>
-          <div class="price">$19.99</div>
-          <button>Add to Cart</button>
+          <a href="/store/productdetails.html">
+            <img src="/assets/product1.png" alt="Product 1" />
+            <h3>Product 1</h3>
+            <div class="price">$19.99</div>
+            <button>Add to Cart</button>
+          </a>
         </article>
         <article class="product">
-          <img src="/assets/product2.png" alt="Product 2" />
-          <h3>Product 2</h3>
-          <div class="price">$19.99</div>
-          <button>Add to Cart</button>
+          <a href="/store/productdetails.html">
+            <img src="/assets/product2.png" alt="Product 2" />
+            <h3>Product 2</h3>
+            <div class="price">$19.99</div>
+            <button>Add to Cart</button>
+          </a>
         </article>
         <article class="product">
-          <img src="/assets/product3.png" alt="Product 3" />
-          <h3>Product 3</h3>
-          <div class="price">$19.99</div>
-          <button>Add to Cart</button>
+          <a href="/store/productdetails.html">
+            <img src="/assets/product3.png" alt="Product 3" />
+            <h3>Product 3</h3>
+            <div class="price">$19.99</div>
+            <button>Add to Cart</button>
+          </a>
         </article>
         <article class="product">
-          <img src="/assets/product4.png" alt="Product 4" />
-          <h3>Product 4</h3>
-          <div class="price">$19.99</div>
-          <button>Add to Cart</button>
+          <a href="/store/productdetails.html">
+            <img src="/assets/product4.png" alt="Product 4" />
+            <h3>Product 4</h3>
+            <div class="price">$19.99</div>
+            <button>Add to Cart</button>
+          </a>
         </article>
         <article class="product">
-          <img src="/assets/product5.png" alt="Product 5" />
-          <h3>Product 5</h3>
-          <div class="price">$19.99</div>
-          <button>Add to Cart</button>
+          <a href="/store/productdetails.html">
+            <img src="/assets/product5.png" alt="Product 5" />
+            <h3>Product 5</h3>
+            <div class="price">$19.99</div>
+            <button>Add to Cart</button>
+          </a>
         </article>
         <article class="product">
-          <img src="/assets/product6.png" alt="Product 6" />
-          <h3>Product 6</h3>
-          <div class="price">$19.99</div>
-          <button>Add to Cart</button>
+          <a href="/store/productdetails.html">
+            <img src="/assets/product6.png" alt="Product 6" />
+            <h3>Product 6</h3>
+            <div class="price">$19.99</div>
+            <button>Add to Cart</button>
+          </a>
         </article>
       </div>
     </section>
