--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 			</ul>
 		</nav>
 		<div class="header__icon">
-			<i class="fa fa-user icon" aria-hidden="true"></i>
-			<i class="fa fa-search icon" aria-hidden="true"></i>
-			<i class="fa fa-shopping-cart icon" aria-hidden="true"></i>
+            <a href="#"><i class="fa fa-user icon" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-search icon" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-shopping-cart icon" aria-hidden="true"></i></a>
 		</div>
 	</header>
 	<!--header ends here-->
