--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Ecomen</title>
+	<title>Ecommerce|VoidKart</title>
 	<meta charset="utf-8">
   	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
   	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,7 +16,7 @@
 <body>
 	<!--header starts here-->
 	<header>
-		<h3>COLO<span>SHOP</span></h3>
+		<h3>VOID<span>KART</span></h3>
 		<nav>
 			<ul>
 				<li><a href="#">Home</a></li>
@@ -79,11 +79,11 @@
 			<div class="register__title"><b><i class="fa fa-envelope" aria-hidden="true"></i><br>Get On The List</b></div>
 			<form action="" class="register__form">
 				<label for="name">Name</label>
-				<input type="text" name="name" id="name" class="form__input">
+				<input type="text" name="name" id="name" class="form__input" placeholder="Name">
 				<label for="email">Email</label>
-				<input type="email" name="name" id="email" class="form__input">
+				<input type="email" name="name" id="email" class="form__input" placeholder="Email">
 				<label for="password">Password</label>
-				<input type="password" name="password" id="password" class="form__input">
+				<input type="password" name="password" id="password" class="form__input" placeholder="Password">
 				<button class="btn form__btn">Subscribe</button>
 			</form>
 			<p>By entering your email, you are accepting our <span><a href="#">Terms of Use</a></span> and <span><a href="#">Privacy Policy</a></span>.</p>
@@ -92,7 +92,7 @@
 <!-- conatactinfo ends here-->
 
 <!-- footer starts here-->
-<footer id="about">
+<section id="about">
 	<p class="footer__head"><b>Special Offer All Branded Sandals Are Flat 50% Discount</b></p>
 	<div class="contact">
 		
@@ -121,7 +121,7 @@
 			<p>988 13Street, Office 435</p>
 			<p>Harlo 61466</p>
 			<p>+(47)157 382 85324</p>
-			<p>ShoppyKark@gmail.com</p>
+			<p>VoidKark@gmail.com</p>
 		</article>
 		<article class="contact__info payment">
 			<p><b>Payment Methods</b></p>
@@ -137,7 +137,7 @@
 	<div class="footer">
 		<p>&copy2023 VoidKart. All rights reserved| Designed by Void.</p>
 	</div>
-</footer>
+</section>
 <!--footer ends here-->
 
 
