register, login pages, readme

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="basic ecommerce websiteS design" />
     <title>Berk Disli | E-Commerce</title>
-    <link rel="shortcut icon" href="img/favicon-32x32.png" />
+    <link rel="shortcut icon" href="images/favicon-32x32.svg" />
     <link
       rel="stylesheet"
       type="text/css"
@@ -40,15 +40,14 @@
             >
           </li>
           <li role="presentation">
+            <a href="register.html" role="menuitem" class="login">Register</a>
+          </li>
+          <li role="presentation">
+            <a href="login.html" role="menuitem" class="login">Login</a>
+          </li>
+          <li role="presentation">
             <i class="fa-solid fa-cart-shopping ">My Cart</i>
           </li>
-            <div>
-              <button class="button login">Sign up</button>
-              or
-              <input class= "placeholder" placeholder= "e-mail adresse" type="text">
-              <input class= "placeholder" placeholder= "password" type="text">
-              <button class="button login">Login</button>
-            </div>
         </ul>
         <h1 id="welcome">COMFY CHAIRS</h1>
       </nav>
@@ -84,8 +83,9 @@
           <h1 id="section">About Us</h1>
 
           <article class="about_us_introduction">
-            <h2>
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt reprehenderit expedita optio necessitatibus. Est dolorem debitis optio expedita exercitationem quisquam assumenda ut explicabo, accusantium fugiat at sint autem? Assumenda a temporibus quibusdam deserunt omnis. In veniam tenetur est earum ipsa doloribus ex amet soluta asperiores modi ea accusantium magnam voluptate ipsam nemo eligendi, debitis odio sint ab neque ratione incidunt! Dignissimos excepturi molestias corrupti dolorem nesciunt aliquam voluptas debitis provident facilis, quisquam modi iste? Quae reprehenderit amet molestias ipsam aspernatur magnam voluptates, saepe molestiae nisi cum inventore ducimus, aliquam voluptas porro eaque exercitationem, sequi dicta! Cum reprehenderit et aperiam atque.</h2>
+            <p>
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt reprehenderit expedita optio necessitatibus. Est dolorem debitis optio expedita exercitationem quisquam assumenda ut explicabo, accusantium fugiat at sint autem? Assumenda a temporibus quibusdam deserunt omnis. In veniam tenetur est earum ipsa doloribus ex amet soluta asperiores modi ea accusantium magnam voluptate ipsam nemo eligendi, debitis odio sint ab neque ratione incidunt! Dignissimos excepturi molestias corrupti dolorem nesciunt aliquam voluptas debitis provident facilis, quisquam modi iste? Quae reprehenderit amet molestias ipsam aspernatur magnam voluptates, saepe molestiae nisi cum inventore ducimus, aliquam voluptas porro eaque exercitationem, sequi dicta! Cum reprehenderit et aperiam atque.
+</p>
           </article>
         </div>
       </div>
@@ -96,7 +96,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt reprehenderit 
           <div class="product-list">
                     
             <div class="product-list__item">
-              <img class="images" src="images/chair1.jpg" alt="screenshot" />
+              <img class="images" src="images/chair9.jpg" alt="screenshot" />
               <div class="order">
                 <h2>Chair 1</h2>
                 <p>
@@ -112,7 +112,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt reprehenderit 
               </div>
             </div>
             <div class="product-list__item">
-              <img class="images" src="images/chair2.jpg" alt="screenshot" />
+              <img class="images" src="images/chair9.jpg" alt="screenshot" />
               <div class="order">
                 <h2>Chair 2</h2>
                 <p>
@@ -130,7 +130,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt reprehenderit 
             <div class="product-list__item">
               <img
               class="images"
-                src="images/chair3.jpg"
+                src="images/chair9.jpg"
                 alt="screenshot"
               />
               <div class="order">
@@ -148,7 +148,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt reprehenderit 
            </div>
           </div>
             <div class="product-list__item">
-              <img class="images" src="images/chair4.jpg" alt="screenshot" />
+              <img class="images" src="images/chair9.jpg" alt="screenshot" />
               <div class="order">
                 <h2>Chair 4</h2>
                 <p>
@@ -164,7 +164,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt reprehenderit 
               </div>
             </div>    
             <div class="product-list__item">
-              <img class="images" src="images/chair5.jpg" alt="screenshot" />
+              <img class="images" src="images/chair9.jpg" alt="screenshot" />
               <div class="order">
                 <h2>Chair 5</h2>
                 <p>
@@ -180,7 +180,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt reprehenderit 
               </div>
             </div>
             <div class="product-list__item">
-              <img class="images" src="images/chair6.jpg" alt="screenshot" />
+              <img class="images" src="images/chair9.jpg" alt="screenshot" />
               <div class="order">
                 <h2>Chair 6</h2>
                 <p>
@@ -196,7 +196,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt reprehenderit 
               </div>
             </div>
           <div class="product-list__item">
-            <img class="images" src="images/chair7.jpg" alt="screenshot" />
+            <img class="images" src="images/chair9.jpg" alt="screenshot" />
             <div class="order">
                 <h2>Chair 7</h2>
               <p>
@@ -212,9 +212,9 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt reprehenderit 
             </div>
           </div>
           <div class="product-list__item">
-            <img class="images" src="images/chair8.jpg" alt="screenshot" />
+            <img class="images" src="images/chair9.jpg" alt="screenshot" />
             <div class="order">
-                <h2>Chair 8</h2>
+                <h2>Chair 9</h2>
               <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum expedita sed quo alias placeat aspernatur veritatis quibusdam distinctio, reprehenderit odit.
               </p>
