Some style added

--- a/menu.html
+++ b/menu.html
@@ -95,7 +95,7 @@
 
             </div>
         </article>
-        <article class="product__card">
+        <article class="product card">
             <div class="badge"><span>customers' Choice</span>
             <hr class="hr-design"/>
 
@@ -108,7 +108,8 @@
                 <button class="btn" product__button>Add To Cart</button>
 
             </div>
-            </article>
+        </article>
+      
             <article class="product card">
                 <div class="badge"><span>customers' Choice</span>
                 <hr class="hr-design"/>
