--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
       <div class="logo">Scents</div>
       <ul class="menu">
-        <li><a href="http://127.0.0.1:5500/">Home</a></li>
+        <li><a href="https://scents.netlify.app/">Home</a></li>
         <li><a href="/index.html/#banner-section">About Us</a></li>
         <li><a href="/store/productdetails.html">Products</a></li>
         <svg class="cart__icon" viewBox="0 0 24 24">
@@ -41,7 +41,7 @@
           trends, our fragrances will transport you to a world of elegance and
           sophistication. Experience the ultimate in fragrance luxury with us
         </p>
-        <button class="btn banner--btn">Check our Latest Products</button>
+        <button class="banner__btn"><a href="#product-section"> Check our Latest Products</button></a>
       </div>
     </header>
 
