--- a/store/LoginRegister.html
+++ b/store/LoginRegister.html
@@ -14,7 +14,7 @@
     <nav>
       <div class="logo">Scents</div>
       <ul class="menu">
-        <li><a href="http://127.0.0.1:5500/">Home</a></li>
+        <li><a href="https://scents.netlify.app/">Home</a></li>
         <li><a href="/index.html/#banner-section">About Us</a></li>
         <li><a href="/store/productdetails.html">Products</a></li>
         <svg class="cart__icon" viewBox="0 0 24 24">
