all files updated

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <i class="fa-solid fa-cart-shopping ">My Cart</i>
           </li>
         </ul>
-        <h1 id="welcome">COMFY CHAIRS</h1>
+        <h1 id="welcome">Comfy Chairs</h1>
       </nav>
       <nav class="page-header__item_mobile">
         <ul role="menubar" class="navigation-list">
