--- a/register.html
+++ b/register.html
@@ -54,7 +54,7 @@
         </li>
       </ul>
       <div class="form">
-        <label class="standart-label" for="name">Name and Surname:</label><br />
+        <label class="standart-label" for="name">Full Name:</label><br />
         <input type="text" id="name" name="name" /><br /><br />
 
         <label class="standart-label" for="email">E-mail:</label><br />
@@ -64,7 +64,7 @@
         <br /><input type="password" id="password" name="password" required />
 
         <br /><br /><label class="standart-label" for="Telephone"
-          >Telephone(Optional):
+          >Phone(Optional):
         </label>
         <br /><input
           type="tel"
