--- a/index.html
+++ b/index.html
@@ -5,35 +5,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Zapatoos</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Unbounded&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
     <!-- navbar/ header begins  -->
     <header>
-        <nav>
-            <div class="hamburger">
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="line3"></div>
-            </div>
-            <ul class="nav-links">
-                <li>
-                    <h1>Zapatoos</h1>
-                </li>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Products</a></li>
-                <li class="login"><a href="#">Login</a></li>
-                <li class="signup"><a href="#">Sign up</a></li>
+        <div class="hamburger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
+        <ul class="nav-links">
+            <li>
+                <h1>Zapatoos</h1>
+            </li>
+            <li><a href="#">Latest</a></li>
+            <li><a href="#">Brands</a></li>
+            <li><a href="#">Shoes</a></li>
+            <li><a href="#">Winter Sale</a></li>
+
+            <div class="right-side">
+                <li><button class="log">Login</button></li>
+                <li><button class="reg">Sign up</button></li>
+                <li><a href="#"><i class='bx bx-search-alt-2'></i></a></li>
                 <li><a href="#"><i class='bx bx-shopping-bag'></i></a></li>
-            </ul>
-        </nav>
+            </div>
+
+        </ul>
     </header>
     <!-- navbar / header ends  -->
 
@@ -42,23 +50,24 @@
     <main>
         <div class="container">
             <div class="product">
+                <div class="shop-button"><i class='bx bx-shopping-bag'></i></div>
                 <img src="Images/Nike_Air.jpg" alt="Nike Air">
                 <h1 class="product__name">Nike Air Max</h1>
-                <h2 class="prodict__price">$500</h2>
+                <h2 class="product__price">$500</h2>
                 <p class="product__discount">Flat 5% off</p>
                 <p class="product__discount-price">$1000</p>
             </div>
             <div class="product">
                 <img src="Images/Nike_Flyknit.jpg" alt="">
                 <h1 class="product__name">Nike Air Max</h1>
-                <h2 class="prodict__price">$500</h2>
+                <h2 class="product__price">$500</h2>
                 <p class="product__discount">Flat 5% off</p>
                 <p class="product__discount-price">$1000</p>
             </div>
             <div class="product">
                 <img src="Images/Nike_Green.jpg" alt="">
                 <h1 class="product__name">Nike Air Max</h1>
-                <h2 class="prodict__price">$500</h2>
+                <h2 class="product__price">$500</h2>
                 <p class="product__discount">Flat 5% off</p>
                 <p class="product__discount-price">$1000</p>
             </div>
