header and main page got their first look

--- a/index.html
+++ b/index.html
@@ -23,21 +23,19 @@
           </header>
       
           <main>
-              <div class="banner">
-                  <div class="banner main__slide">
-                      <section class="main__slide slide__info">
-                          <h1>Celebrate your love for beauty</h1>
-                          <p>
-                              Happy New Year and it may bring you good health, <br />
-                              appiness, and fortune.
-                          </p>
-                      </section>
-                  </div>
-              </div>
+               <div class="banner">
+                    <h1>Celebrate your love for beauty</h1>
+                    <p>
+                        Happy New Year and it may bring you good health, <br/>
+                        appiness, and fortune.
+                    </p>
+               </div>
           </main>
 
           <section class="products-one">
-            <h2>products one</h2>
+            <h2>
+                Featured collection
+            </h2>
           </section>
 
           <section class="products-two">
