select detail function

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <script src="router.js" defer></script>
         <script src="productsPopulate.js" defer></script>
         <script src="main.js" defer></script>
-        <title>Document</title>
+        <title>Ecommerce</title>
     </head>
     <body>
         <header>
@@ -53,7 +53,7 @@
                 </section>
                 <section class="allPages__page" id="detail">
                     <div class="product-detail flex flex-col flex-gap-sml">
-                        <img src="img/car2.webp" alt="product image" />
+                        <!-- <img src="img/car2.webp" alt="product image" />
                         <div
                             class="product-detail__info flex flex-col flex-gap-sml"
                         >
@@ -79,7 +79,7 @@
                             <button class="btn btn-aqua product-detail__btn">
                                 Add to cart
                             </button>
-                        </div>
+                        </div> -->
                     </div>
                 </section>
                 <section class="allPages__page" id="cart">
@@ -105,25 +105,25 @@
                         <img
                             id="card_AMEX"
                             class="cardOption"
-                            src="https://raw.githubusercontent.com/aaronfagan/svg-credit-card-payment-icons/master/flat/amex.svg"
+                            src="img/amex.svg"
                             alt="American Express option"
                         />
                         <img
                             id="card_Discover"
                             class="cardOption"
-                            src="https://raw.githubusercontent.com/aaronfagan/svg-credit-card-payment-icons/master/logo/discover.svg"
+                            src="img/discover.svg"
                             alt="Discover option"
                         />
                         <img
                             id="card_Master"
                             class="cardOption"
-                            src="https://raw.githubusercontent.com/aaronfagan/svg-credit-card-payment-icons/master/logo/mastercard.svg"
+                            src="img/mastercard.svg"
                             alt="Master Card option"
                         />
                         <img
                             id="card_Visa"
                             class="cardOption"
-                            src="https://raw.githubusercontent.com/aaronfagan/svg-credit-card-payment-icons/master/logo/visa.svg"
+                            src="img/visa.svg"
                             alt="Visa option"
                         />
                     </div>
