Small responsiveness changes and added sheep animation

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="search-container">
             <form class="search-container__form">
-              <input type="text" placeholder="Search.." name="search" class="search__field">
+              <input type="text" placeholder=" Search..." name="search" class="search__field">
               <button type="submit" class="btn search__btn" name="Search" aria-label="Search field button"><i class="fa fa-search"></i></button>
             </form>
         </div>
@@ -50,6 +50,9 @@
             </div>
             <div class="main-container__sustainable background__img">
                 <div class="sustainable__description">
+                        <div class="sheep-container">
+                            <img src="/src/images/sheep.png" alt="A sheep">
+                        </div>
                     <p>
                         Thanks to careful and meticulous selection, we can take advantage of excellence in quality with total respect for nature. <br>
                     </p>
